// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array parser of enums parses basic options 1`] = `
{
  "arr": [
    "test",
    "is",
  ],
  "arrEnum": [
    "test",
    "is",
  ],
  "defaultArr": [
    "test",
  ],
  "env": "local",
  "overrides": [
    "test",
    "is",
  ],
}
`;

exports[`array parser of numbers parses basic options 1`] = `
{
  "arr": [
    5,
    6,
  ],
  "defaultArr": [
    1,
    2,
  ],
  "env": "local",
  "overrides": [
    5,
    6,
  ],
}
`;

exports[`array parser of strings parses basic options 1`] = `
{
  "arr": [
    "str1",
    "whitespace_around",
    "3",
  ],
  "defaultArr": [
    "d1",
    "d2",
  ],
  "env": "local",
}
`;
